/** <<boundary>> AppMedico */
export default class AppMedico {
  entrar(email: string, senha: string): void {}
  verAgenda(): void {}
  lerExame(): void {}
  triar(): void {}
  emitirLaudo(): void {}
}
