import AutenticacaoService from "./AutenticacaoService.js";
import ControladorAgendamento from "./ControladorAgendamento.js";

/** <<boundary>> AppPaciente */
export default class AppPaciente {
  entrar(email: string, senha: string): void {}
  agendarConsulta(): void {}
  enviarExamePrevio(): void {}
}
