enum Especialidade {
  CARDIOLOGIA,
  DERMATOLOGIA,
  ORTOPEDIA,
  PSIQUIATRIA
}

export default Especialidade;
