import { DateTime } from "./Tipos.js";

export default class Mensagem {
  titulo: string;
  corpo: string;
  criadaEm: DateTime;
}
