enum StatusConsulta {
  SOLICITADA,
  CONFIRMADA,
  REALIZADA,
  CANCELADA
}

export default StatusConsulta;
