enum TipoDocumento {
  EXAME_PREVIO,
  LAUDO,
  RECEITA,
  ATESTADO
}

export default TipoDocumento;
